scss/modules/_services.scss
$cardColors: (
  ".card-software": $software-color,
  ".card-support": $support-color,
  ".card-marketing": $marketing-color,
  ".card-services": $services-color,
  ".card-design": $design-color,
  ".card-security": $security-color,
  ".card-training": $training-color
);

.services{
    overflow-x:hidden;
    .container{
        margin-bottom:50px;
    }
}

.heading{
    display: flex;
    align-items: center;
    padding-top:40px;
}

.heading h2{
    font-size: 2.7rem;
    margin-right:auto;
    font-weight:bold;
    color: $primary-color;
}

.heading h3{
    font-size: 2.2rem;
    margin-right:auto;
    font-weight:bold;
    color: $primary-color;
}

.heading h4{
    font-size: 1.625rem;
    font-weight:bold;
}

.heading h4 a{
    color: #333645;
}

.card{
    position:relative;
    top: 0;
    border:1px solid #ccc;
    border-radius:15px;
    cursor: pointer;    
    padding:30px;
    box-shadow:0 3px 35px rgb(0 0 0 /10%);    
    text-align:center;
    transition: .5s ease;
    background-color: $white;
    margin-top:20px;

    & i{
        display: flex;
        width: 65px;
        height: 65px;
        margin: auto auto 15px auto;
        align-items: center;
        justify-content: center;
        background-color: #6c757d;
        border-radius: 40px;
        color: $white;
        font-size: 1.75rem;
    }
}

.card:hover{
    top: -10px;    
    & i, & span.btn{
        background-color: $white;        
    }
    & h2, & p{
        color: $white;
    }
}


@each $cardName, $color in $cardColors {
    #{$cardName} {    
        &:hover, & i, & span.btn{
        background-color: #{$color};
        }
        &:hover{
            & i, & span.btn{
                color: #{$color};      
            }
        }
    }
}


.card h2{
    font-size: 1.3rem;
    position: relative;
    margin: 0 0 20px 0;
    font-weight: normal;
    color: $primary-color;
}

.card p{
    font-size: .8125rem;
    line-height: 1.375rem;
    margin-bottom: 13px;
    font-weight: 400;
    color: $primary-color;
    
}

.btn-regular{
    margin:auto auto 0 auto;
    padding: 10px 15px;
}

.carousel{
    display:flex;
    justify-content: center;
    padding: 50px 0;
}

.partners-strip{
    display: flex;
    flex-direction: row;
    align-items: center;
}

.item{
    margin:0 50px;
    filter: grayscale(100%);

    &:hover{
        filter:none;
    }
}

